# concurrency-benchmarks

./: .travis.yml  Benchmarks.hs  Changelog.md  Charts.hs  LICENSE  README.md  cabal.project  concurrency-benchmarks.cabal  run.sh  shell.nix  stack.yaml
.github/workflows/: packcheck.yml
charts/: results.csv
