name:          concurrency-benchmarks
category:      Benchmark
version:       0.1.1
license:       MIT
license-file:  LICENSE
author:        Harendra Kumar
maintainer:    Harendra Kumar
stability:     provisional
homepage:      http://github.com/composewell/concurrency-benchmarks
bug-reports:   http://github.com/composewell/concurrency-benchmarks/issues
copyright:     Copyright (c) 2018 Harendra Kumar
synopsis:      Benchmarks to compare concurrency APIs
description:
  Benchmarks to compare the pure concurrency overhead of various flavors of
  concurrent @streamly@ streams and the @async@ package.
  .
  Use @cabal new-bench@ or @stack bench@ to run the benchmarks. To generate
  charts, run the benchmarks with @--csv-raw=results.csv@ option and then run
  @makecharts results.csv@. Charts are generated in the @charts@ directory.

cabal-version: >= 1.18
tested-with:   GHC==8.6.5
             , GHC==8.8.4
             , GHC==8.10.2
build-type:    Simple
extra-source-files:
  Changelog.md
  README.md
  stack.yaml

  .github/workflows/packcheck.yml
  appveyor.yml
  run.sh
  cabal.project

extra-doc-files:
  "charts/10,000tasks,0secdelay-maxrss.svg"
  "charts/10,000tasks,0secdelay-time.svg"
  "charts/10,000tasks,5secdelay-maxrss.svg"
  "charts/10,000tasks,5secdelay-time.svg"
  charts/results.csv

source-repository head
  type: git
  location: git://github.com/composewell/concurrency-benchmarks.git

flag dev
  description: Development build
  manual: True
  default: False

benchmark benchmarks
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   .
  main-is:          Benchmarks.hs
  ghc-options: -O2 -Wall -threaded -with-rtsopts "-T -N"
  if impl(ghc >= 8.0)
    ghc-options:    -Wcompat
                    -Wunrecognised-warning-flags
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances

  build-depends:
    base                == 4.*,
    deepseq             >= 1.4.0 && < 1.5,
    gauge               >= 0.2.1 && < 0.3,
    mtl                 >= 2     && < 2.3,
    transformers        >= 0.4   && < 0.6,
    async               >= 2.1.1 && < 2.3,
    random              >= 1.0   && < 2,
    streamly            >= 0.7.2 && < 0.8.0

executable makecharts
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  hs-source-dirs:   .
  main-is: Charts.hs
  ghc-options: -Wall

  if flag(dev)
    build-depends:
        base              == 4.*
      , bench-graph       >= 0.1     && < 0.2
      , bytestring        >= 0.9     && < 0.11
      , Chart             >= 1.6     && < 2
      , Chart-diagrams    >= 1.6     && < 2
      , csv               >= 0.1     && < 0.2
      , directory         >= 1.2     && < 1.4
      , split             >= 0.2     && < 0.3
      , text              >= 1.1.1   && < 1.3
      , transformers      >= 0.4     && < 0.6
      , typed-process     >= 0.1.0.0 && < 0.3
      , getopt-generics   >= 0.11    && < 0.14
  else
    buildable: False
